--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "docs:dev": "vitepress dev docs",
     "docs:build": "RELEASE_TAG=$(git describe --tags --abbrev=0 2>/dev/null || echo dev) node scripts/docs-build.mjs",
     "docs:preview": "vitepress preview docs --port 5173",
-    "docs:guard": "pnpm run frontmatter:lint && pnpm run guard && pnpm run drift && pnpm run release:folders:check && pnpm run ux:scan",
+    "docs:guard": "pnpm run frontmatter:lint && pnpm run guard && pnpm run drift && pnpm run release:folders:check && pnpm run state:check && pnpm run ux:scan",
     "guard": "node scripts/guard.mjs",
     "labs": "node scripts/run-labs.mjs",
     "lint:md": "markdownlint \"**/*.md\" --config .markdownlint.jsonc",
@@ -28,6 +28,8 @@
     "changelog:add": "node scripts/changelog.mjs add",
     "analytics:snapshot": "node scripts/cloudflare-analytics.mjs",
     "release:folders:check": "node scripts/release-folders-check.mjs",
+    "state:build": "node scripts/generate-state.mjs",
+    "state:check": "node scripts/generate-state.mjs --check",
     "test": "pnpm run test:unit && pnpm run test:components",
     "test:unit": "node --test tests/*.test.mjs",
     "test:components": "vitest run tests/components tests/accessibility",
