Refactor governance documentation structure and introduce Verify-in-10 guide and lab
- Updated contracts directory decision to clarify governance document accessibility and organization.
- Revised CTA guardrail alignment decision to streamline checks and reduce redundancy.
- Established release-centric ops folders for better organization of release artifacts.
- Introduced new Verify-in-10 guide and lab to enhance verification processes before moving changes to live.
- Adjusted navigation groups for various documents to improve clarity and accessibility.
- Enhanced homepage and start hub with new CTAs linking to Verify-in-10 resources.
- Updated state ledger and release manifest to include references to the new Verify-in-10 decision.

--- a/ops/releases/2025-11/manifest.json
+++ b/ops/releases/2025-11/manifest.json
@@ -23,6 +23,10 @@
     {
       "title": "Automate state and release pages",
       "path": "docs/decisions/automation-state-pages.md"
+    },
+    {
+      "title": "Verify-in-10 decision",
+      "path": "docs/decisions/verify-in-10.md"
     }
   ],
   "signals": [
