--- a/labs/versioning-and-releases.lab.json
+++ b/labs/versioning-and-releases.lab.json
@@ -1,7 +1,7 @@
 {
   "setup": ["pnpm run ux:scan", "pnpm run traceability:check", "pnpm run docs:guard"],
   "check": [
-    "node -e \"const fs=require('fs');const ok=/v2025\\.11-releases/.test(fs.readFileSync('docs/signals/receipts/v2025.11-releases.md','utf8')) && /Versioning & releases/.test(fs.readFileSync('docs/releases/state/v2025.11-releases.md','utf8'));process.exit(ok?0:1)\""
+    "node -e \"const fs=require('fs');const receipts=fs.readFileSync('docs/signals/receipts/v2025.11-releases.md','utf8');const state=fs.readFileSync('docs/releases/state/v2025.11-releases.md','utf8');const ok=/v2025\\.11-releases/.test(receipts)&&/versioning & releases/i.test(state);process.exit(ok?0:1)\""
   ],
   "timeout_minutes": 10
 }
