--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -4,6 +4,7 @@
     "yzhang.markdown-all-in-one",
     "davidanson.vscode-markdownlint",
     "editorconfig.editorconfig",
-    "redhat.vscode-yaml"
+    "redhat.vscode-yaml",
+    "mechatroner.rainbow-csv"
   ]
 }
