--- a/ops/releases/2025-11/manifest.json
+++ b/ops/releases/2025-11/manifest.json
@@ -5,7 +5,7 @@
   "guardrail_mapping": "governance-state",
   "release_tag": "site-v2025.11",
   "status": "live",
-  "summary": "Monthly release artefacts live here. Follow the release folder decision for naming rules.",
+  "summary": "Monthly release artefacts live here. Follow the release folder decision for naming rules. This window locks the Navigate/Operate/Learn/Mitigate skeleton with `/legacy` traffic capped at 3.4% and ships the Operate pilot (versioning & releases) with m-lab-pass 0.92 and zero L3 overrides.",
   "metrics": {
     "adoption": "3 pages touched / 1,740 views / median time-to-answer 51 s (Cloudflare analytics, 14-day window).",
     "quality": "Lab pass rate 1.00, broken links 0 (Quick-Run + Link Drift).",
@@ -35,6 +35,14 @@
     {
       "title": "Deep-embed North Star governance decision",
       "path": "docs/decisions/dec-2025-11-ia-overhaul.md"
+    },
+    {
+      "title": "Operate pilot — versioning & releases",
+      "path": "docs/decisions/dec-2025-11-operate-pilot.md"
+    },
+    {
+      "title": "Navigation lock decision",
+      "path": "docs/decisions/dec-2025-11-nav-lock.md"
     }
   ],
   "signals": [
@@ -52,6 +60,15 @@
       "title": "Labs report",
       "path": "reports/labs.json",
       "note": "Quick-Run + Proof Run lab results"
+    },
+    {
+      "title": "Pilot receipts",
+      "path": "docs/signals/receipts/v2025.11-releases.md",
+      "note": "Adoption, quality, credibility for the operate pilot slice"
+    },
+    {
+      "title": "Pilot state snapshot",
+      "path": "docs/releases/state/v2025.11-releases.md"
     }
   ],
   "receipts": [
