fix(quality-gate): enhance link checking with GitHub token and retry logic

--- a/.github/workflows/quality-gate.yml
+++ b/.github/workflows/quality-gate.yml
@@ -68,8 +68,8 @@ jobs:
             --base "${{ env.DIST_DIR }}"
             --require-https
             --offline
-            --exclude-mail
             --exclude-path "**/drafts/**"
+            --github-token "${{ secrets.GITHUB_TOKEN }}"
             "${{ env.DIST_DIR }}/**/*.html"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -116,8 +116,13 @@ jobs:
           args: >-
             --no-progress
             --max-concurrency 8
-            --exclude-mail
+            --github-token "${{ secrets.GITHUB_TOKEN }}"
+            --retry-wait-secs 5
+            --max-retries 4
+            --accept 200,403,429
             --exclude "https://localhost/*"
+            --exclude "https://github.com/lop-louis/northbook/issues/new.*"
+            --exclude "https://github.com/lop-louis/northbook/edit/.*"
             "${{ env.DIST_DIR }}/**/*.html"
         continue-on-error: true
         env:
