--- a/docs/.vitepress/ops/releases.generated.json
+++ b/docs/.vitepress/ops/releases.generated.json
@@ -1,21 +1,6 @@
 {
-  "generatedAt": "2025-11-14T07:30:03.445Z",
+  "generatedAt": "2025-11-14T07:53:50.161Z",
   "releases": {
-    "site-v2025.11decisi": {
-      "pages": [],
-      "decisions": [
-        {
-          "title": "Release bundle · site-v2025.11",
-          "path": "/operate/decisions/dec-2025-11-chapter-baseline",
-          "bucket": "operate",
-          "owner": "@louis",
-          "status": "live",
-          "decision_id": "dec-2025-11-chapter-ops-defaults",
-          "leading_metric": "m-dashboard-freshness-days",
-          "lagging_metric": "m-decision-hit-rate"
-        }
-      ]
-    },
     "site-v2025.11": {
       "pages": [
         {
@@ -26,7 +11,8 @@
           "status": "pilot",
           "decision_id": "dec-2025-11-chapter-ops-defaults",
           "leading_metric": "m-lab-pass",
-          "lagging_metric": "m-defect-rate-changed-pages"
+          "lagging_metric": "m-defect-rate-changed-pages",
+          "list_label": "How we tell a casual chat from an ops session, plus the default 1:1 pattern we fall back to when nothing else is agreed.\n"
         },
         {
           "title": "Chapter ops steward roster",
@@ -36,7 +22,8 @@
           "status": "live",
           "decision_id": "dec-2025-11-chapter-ops-defaults",
           "leading_metric": "m-dashboard-freshness-days",
-          "lagging_metric": "m-decision-hit-rate"
+          "lagging_metric": "m-decision-hit-rate",
+          "list_label": "Who is currently on point for scope, signals and exceptions in this pilot, plus how fast they aim to respond.\n"
         },
         {
           "title": "Chapter state · Web frontend pilot",
@@ -46,7 +33,8 @@
           "status": "pilot",
           "decision_id": "dec-2025-11-chapter-ops-defaults",
           "leading_metric": "m-dashboard-freshness-days",
-          "lagging_metric": "m-decision-hit-rate"
+          "lagging_metric": "m-decision-hit-rate",
+          "list_label": "Snapshot of where the frontend chapter pilot stands today across lanes, stewards, and the live signals.\n"
         },
         {
           "title": "Cloud access exception stub",
@@ -56,7 +44,8 @@
           "status": "pilot",
           "decision_id": "dec-2025-11-chapter-ops-defaults",
           "leading_metric": "m-time-to-freeze",
-          "lagging_metric": "m-time-to-recovery"
+          "lagging_metric": "m-time-to-recovery",
+          "list_label": "Simple template for handling cloud access blocks in the open instead of hacking around them.\n"
         },
         {
           "title": "Frontend chapter · scope line",
@@ -66,7 +55,8 @@
           "status": "live",
           "decision_id": "dec-2025-11-chapter-ops-defaults",
           "leading_metric": "m-time-to-answer",
-          "lagging_metric": "m-decision-hit-rate"
+          "lagging_metric": "m-decision-hit-rate",
+          "list_label": "What the frontend chapter is for, what it is not for, and when to bring something here instead of to your squad.\n"
         },
         {
           "title": "Learn lane · Web frontend pilot",
@@ -76,7 +66,8 @@
           "status": "live",
           "decision_id": "dec-2025-11-chapter-ops-defaults",
           "leading_metric": "m-dashboard-freshness-days",
-          "lagging_metric": "m-decision-hit-rate"
+          "lagging_metric": "m-decision-hit-rate",
+          "list_label": "How we watch the pilot’s health and turn two simple signals into small, real changes.\n"
         },
         {
           "title": "Mitigate lane · Web frontend pilot",
@@ -86,7 +77,8 @@
           "status": "pilot",
           "decision_id": "dec-2025-11-chapter-ops-defaults",
           "leading_metric": "m-dashboard-freshness-days",
-          "lagging_metric": "m-decision-hit-rate"
+          "lagging_metric": "m-decision-hit-rate",
+          "list_label": "Where we park the ugly stuff for this pilot: blocks, exceptions, and how we decide what to do about them.\n"
         },
         {
           "title": "Navigate lane · Northbook pilot",
@@ -96,7 +88,8 @@
           "status": "live",
           "decision_id": "dec-2025-11-chapter-ops-defaults",
           "leading_metric": "m-nav-open",
-          "lagging_metric": "m-time-to-answer"
+          "lagging_metric": "m-time-to-answer",
+          "list_label": "How the Navigate bucket works in this pilot and what belongs here instead of Operate, Learn, or Mitigate.\n"
         },
         {
           "title": "Operate lane · Web frontend pilot",
@@ -106,7 +99,8 @@
           "status": "live",
           "decision_id": "dec-2025-11-chapter-ops-defaults",
           "leading_metric": "m-dashboard-freshness-days",
-          "lagging_metric": "m-decision-hit-rate"
+          "lagging_metric": "m-decision-hit-rate",
+          "list_label": "What lives in Operate for the frontend pilot: the current state, named stewards, and the few working agreements we actually run.\n"
         },
         {
           "title": "Release bundle · site-v2025.11",
@@ -116,7 +110,8 @@
           "status": "live",
           "decision_id": "dec-2025-11-chapter-ops-defaults",
           "leading_metric": "m-dashboard-freshness-days",
-          "lagging_metric": "m-decision-hit-rate"
+          "lagging_metric": "m-decision-hit-rate",
+          "list_label": "Bundle of everything tagged site-v2025.11 so ops and auditors can see what this release actually touched.\n"
         },
         {
           "title": "Releases · Northbook",
@@ -126,7 +121,8 @@
           "status": "live",
           "decision_id": "dec-2025-11-chapter-ops-defaults",
           "leading_metric": "m-dashboard-freshness-days",
-          "lagging_metric": "m-decision-hit-rate"
+          "lagging_metric": "m-decision-hit-rate",
+          "list_label": "Index of tagged Northbook releases for when you need to see how the system changed over time.\n"
         },
         {
           "title": "Signals roster",
@@ -136,7 +132,8 @@
           "status": "live",
           "decision_id": "dec-2025-11-chapter-ops-defaults",
           "leading_metric": "m-dashboard-freshness-days",
-          "lagging_metric": "m-decision-hit-rate"
+          "lagging_metric": "m-decision-hit-rate",
+          "list_label": "The two health checks we watch for the pilot—roster freshness and whether people leave sessions knowing their next step.\n"
         },
         {
           "title": "Web Frontend chapter scope line",
@@ -146,10 +143,23 @@
           "status": "live",
           "decision_id": "dec-2025-11-chapter-ops-defaults",
           "leading_metric": "m-nav-open",
-          "lagging_metric": "m-time-to-answer"
+          "lagging_metric": "m-time-to-answer",
+          "list_label": "The fast scope line for the frontend chapter: what belongs here, what does not, and how to exit to squads or exceptions.\n"
         }
       ],
-      "decisions": []
+      "decisions": [
+        {
+          "title": "Release bundle · site-v2025.11",
+          "path": "/operate/decisions/dec-2025-11-chapter-baseline",
+          "bucket": "operate",
+          "owner": "@louis",
+          "status": "live",
+          "decision_id": "dec-2025-11-chapter-ops-defaults",
+          "leading_metric": "m-dashboard-freshness-days",
+          "lagging_metric": "m-decision-hit-rate",
+          "list_label": null
+        }
+      ]
     }
   }
 }
