--- a/docs/.vitepress/ops/releases.generated.json
+++ b/docs/.vitepress/ops/releases.generated.json
@@ -1,5 +1,5 @@
 {
-  "generatedAt": "2025-11-14T07:53:50.161Z",
+  "generatedAt": "2025-11-14T08:42:29.866Z",
   "releases": {
     "site-v2025.11": {
       "pages": [
@@ -136,15 +136,15 @@
           "list_label": "The two health checks we watch for the pilot—roster freshness and whether people leave sessions knowing their next step.\n"
         },
         {
-          "title": "Web Frontend chapter scope line",
+          "title": "Web frontend chapter · fast scope line (archived)",
           "path": "/navigate/chapter-scope",
           "bucket": "navigate",
           "owner": "@louis",
-          "status": "live",
+          "status": "archived",
           "decision_id": "dec-2025-11-chapter-ops-defaults",
           "leading_metric": "m-nav-open",
           "lagging_metric": "m-time-to-answer",
-          "list_label": "The fast scope line for the frontend chapter: what belongs here, what does not, and how to exit to squads or exceptions.\n"
+          "list_label": "**Heads-up:** The canonical scope page is now [Frontend chapter · scope line](./frontend-charter.md).\n"
         }
       ],
       "decisions": [
