--- a/docs/.vitepress/ops/releases.generated.json
+++ b/docs/.vitepress/ops/releases.generated.json
@@ -1,5 +1,5 @@
 {
-  "generatedAt": "2025-11-14T08:42:29.866Z",
+  "generatedAt": "2025-11-14",
   "releases": {
     "site-v2025.11": {
       "pages": [
