Refactor PageCtas component to use new CTA resolution logic and update links
Add PilotPageList component for displaying pilot pages based on release data

Register PilotPageList component in theme index

Update 404 page for clarity and correct links

Create decision document for site-v2025.11 release bundle

Add index page for releases with a focus on historical changes

Implement site-v2025.11 release bundle details

Create state snapshot page for the web frontend chapter pilot

Update gated pages draft for expected outcomes

Revise index page to reflect new chapter state links

Refactor learn index page to include quick links for pilot pages

Rename cloud access exception stub to cloud access blocks for clarity

Update mitigate index page to include quick links for pilot pages

Rename chapter scope document for clarity

Update frontend charter title for consistency

Revise navigate index page to include quick links for pilot pages

Refactor operate index page to include quick links for pilot pages

Update ops defaults meetings document for CTA labels

Rename chapter ops steward roster for clarity

Revise start here page to include quick links for pilot pages

Update IA overhaul contract for expected outcomes

Correct CTA links in cta-map.json for new structure

Enhance state generation script for expected outcomes

Refactor navigation sync script for improved sidebar handling

Update releases sync script to include CTA labels in entries

--- a/docs/.vitepress/ops/releases.generated.json
+++ b/docs/.vitepress/ops/releases.generated.json
@@ -12,32 +12,25 @@
           "decision_id": "dec-2025-11-chapter-ops-defaults",
           "leading_metric": "m-lab-pass",
           "lagging_metric": "m-defect-rate-changed-pages",
-          "list_label": "How we tell a casual chat from an ops session, plus the default 1:1 pattern we fall back to when nothing else is agreed.\n"
+          "list_label": "How we tell a casual chat from an ops session, plus the default 1:1 pattern we fall back to when nothing else is agreed.\n",
+          "cta_primary_label": "try_ops_defaults",
+          "cta_secondary_label": "see_roster_signals"
         },
         {
-          "title": "Chapter ops steward roster",
-          "path": "/operate/stewards",
-          "bucket": "operate",
+          "title": "Chapter Scope (duplicate)",
+          "path": "/navigate/chapter-scope",
+          "bucket": "navigate",
           "owner": "@louis",
-          "status": "live",
+          "status": "archived",
           "decision_id": "dec-2025-11-chapter-ops-defaults",
-          "leading_metric": "m-dashboard-freshness-days",
-          "lagging_metric": "m-decision-hit-rate",
-          "list_label": "Who is currently on point for scope, signals and exceptions in this pilot, plus how fast they aim to respond.\n"
+          "leading_metric": "m-nav-open",
+          "lagging_metric": "m-time-to-answer",
+          "list_label": "**Heads-up:** The canonical scope page is now [Frontend chapter · scope line](./frontend-charter.md).\n",
+          "cta_primary_label": "start_with_chapter_scope",
+          "cta_secondary_label": "open_chapter_state"
         },
         {
-          "title": "Chapter state · Web frontend pilot",
-          "path": "/operate/state/web-frontend",
-          "bucket": "operate",
-          "owner": "@louis",
-          "status": "pilot",
-          "decision_id": "dec-2025-11-chapter-ops-defaults",
-          "leading_metric": "m-dashboard-freshness-days",
-          "lagging_metric": "m-decision-hit-rate",
-          "list_label": "Snapshot of where the frontend chapter pilot stands today across lanes, stewards, and the live signals.\n"
-        },
-        {
-          "title": "Cloud access exception stub",
+          "title": "Cloud access blocks",
           "path": "/mitigate/exception-cloud-access",
           "bucket": "mitigate",
           "owner": "@louis",
@@ -45,10 +38,12 @@
           "decision_id": "dec-2025-11-chapter-ops-defaults",
           "leading_metric": "m-time-to-freeze",
           "lagging_metric": "m-time-to-recovery",
-          "list_label": "Simple template for handling cloud access blocks in the open instead of hacking around them.\n"
+          "list_label": "Simple template for handling cloud access blocks in the open instead of hacking around them.\n",
+          "cta_primary_label": "raise_exception",
+          "cta_secondary_label": "use_in_next_session"
         },
         {
-          "title": "Frontend chapter · scope line",
+          "title": "Frontend charter",
           "path": "/navigate/frontend-charter",
           "bucket": "navigate",
           "owner": "@louis",
@@ -56,10 +51,12 @@
           "decision_id": "dec-2025-11-chapter-ops-defaults",
           "leading_metric": "m-time-to-answer",
           "lagging_metric": "m-decision-hit-rate",
-          "list_label": "What the frontend chapter is for, what it is not for, and when to bring something here instead of to your squad.\n"
+          "list_label": "What the frontend chapter is for, what it is not for, and when to bring something here instead of to your squad.\n",
+          "cta_primary_label": "try_ops_defaults",
+          "cta_secondary_label": "see_roster_signals"
         },
         {
-          "title": "Learn lane · Web frontend pilot",
+          "title": "Learn overview",
           "path": "/learn",
           "bucket": "learn",
           "owner": "@louis",
@@ -67,10 +64,12 @@
           "decision_id": "dec-2025-11-chapter-ops-defaults",
           "leading_metric": "m-dashboard-freshness-days",
           "lagging_metric": "m-decision-hit-rate",
-          "list_label": "How we watch the pilot’s health and turn two simple signals into small, real changes.\n"
+          "list_label": "How we watch the pilot’s health and turn two simple signals into small, real changes.\n",
+          "cta_primary_label": "open_signals_roster",
+          "cta_secondary_label": "open_chapter_state"
         },
         {
-          "title": "Mitigate lane · Web frontend pilot",
+          "title": "Mitigate overview",
           "path": "/mitigate",
           "bucket": "mitigate",
           "owner": "@louis",
@@ -78,10 +77,12 @@
           "decision_id": "dec-2025-11-chapter-ops-defaults",
           "leading_metric": "m-dashboard-freshness-days",
           "lagging_metric": "m-decision-hit-rate",
-          "list_label": "Where we park the ugly stuff for this pilot: blocks, exceptions, and how we decide what to do about them.\n"
+          "list_label": "Where we park the ugly stuff for this pilot: blocks, exceptions, and how we decide what to do about them.\n",
+          "cta_primary_label": "open_cloud_exception",
+          "cta_secondary_label": "raise_exception"
         },
         {
-          "title": "Navigate lane · Northbook pilot",
+          "title": "Navigate overview",
           "path": "/navigate",
           "bucket": "navigate",
           "owner": "@lop",
@@ -89,10 +90,12 @@
           "decision_id": "dec-2025-11-chapter-ops-defaults",
           "leading_metric": "m-nav-open",
           "lagging_metric": "m-time-to-answer",
-          "list_label": "How the Navigate bucket works in this pilot and what belongs here instead of Operate, Learn, or Mitigate.\n"
+          "list_label": "How the Navigate bucket works in this pilot and what belongs here instead of Operate, Learn, or Mitigate.\n",
+          "cta_primary_label": "open_chapter_state",
+          "cta_secondary_label": "open_steward_roster"
         },
         {
-          "title": "Operate lane · Web frontend pilot",
+          "title": "Operate overview",
           "path": "/operate",
           "bucket": "operate",
           "owner": "@louis",
@@ -100,29 +103,9 @@
           "decision_id": "dec-2025-11-chapter-ops-defaults",
           "leading_metric": "m-dashboard-freshness-days",
           "lagging_metric": "m-decision-hit-rate",
-          "list_label": "What lives in Operate for the frontend pilot: the current state, named stewards, and the few working agreements we actually run.\n"
-        },
-        {
-          "title": "Release bundle · site-v2025.11",
-          "path": "/operate/releases/site-v2025.11",
-          "bucket": "operate",
-          "owner": "@louis",
-          "status": "live",
-          "decision_id": "dec-2025-11-chapter-ops-defaults",
-          "leading_metric": "m-dashboard-freshness-days",
-          "lagging_metric": "m-decision-hit-rate",
-          "list_label": "Bundle of everything tagged site-v2025.11 so ops and auditors can see what this release actually touched.\n"
-        },
-        {
-          "title": "Releases · Northbook",
-          "path": "/operate/releases",
-          "bucket": "operate",
-          "owner": "@lop",
-          "status": "live",
-          "decision_id": "dec-2025-11-chapter-ops-defaults",
-          "leading_metric": "m-dashboard-freshness-days",
-          "lagging_metric": "m-decision-hit-rate",
-          "list_label": "Index of tagged Northbook releases for when you need to see how the system changed over time.\n"
+          "list_label": "What lives in Operate for the frontend pilot: the current state, named stewards, and the few working agreements we actually run.\n",
+          "cta_primary_label": "open_chapter_state",
+          "cta_secondary_label": "open_steward_roster"
         },
         {
           "title": "Signals roster",
@@ -133,33 +116,25 @@
           "decision_id": "dec-2025-11-chapter-ops-defaults",
           "leading_metric": "m-dashboard-freshness-days",
           "lagging_metric": "m-decision-hit-rate",
-          "list_label": "The two health checks we watch for the pilot—roster freshness and whether people leave sessions knowing their next step.\n"
+          "list_label": "The two health checks we watch for the pilot—roster freshness and whether people leave sessions knowing their next step.\n",
+          "cta_primary_label": "use_in_next_session",
+          "cta_secondary_label": "open_chapter_state"
         },
         {
-          "title": "Web frontend chapter · fast scope line (archived)",
-          "path": "/navigate/chapter-scope",
-          "bucket": "navigate",
-          "owner": "@louis",
-          "status": "archived",
-          "decision_id": "dec-2025-11-chapter-ops-defaults",
-          "leading_metric": "m-nav-open",
-          "lagging_metric": "m-time-to-answer",
-          "list_label": "**Heads-up:** The canonical scope page is now [Frontend chapter · scope line](./frontend-charter.md).\n"
-        }
-      ],
-      "decisions": [
-        {
-          "title": "Release bundle · site-v2025.11",
-          "path": "/operate/decisions/dec-2025-11-chapter-baseline",
+          "title": "Steward roster",
+          "path": "/operate/stewards",
           "bucket": "operate",
           "owner": "@louis",
           "status": "live",
           "decision_id": "dec-2025-11-chapter-ops-defaults",
           "leading_metric": "m-dashboard-freshness-days",
           "lagging_metric": "m-decision-hit-rate",
-          "list_label": null
+          "list_label": "Who is currently on point for scope, signals and exceptions in this pilot, plus how fast they aim to respond.\n",
+          "cta_primary_label": "open_signals_roster",
+          "cta_secondary_label": "raise_exception"
         }
-      ]
+      ],
+      "decisions": []
     }
   }
 }
