chore: update owner references from '@louis' to '@lop' across multiple files

--- a/docs/.vitepress/ops/releases.generated.json
+++ b/docs/.vitepress/ops/releases.generated.json
@@ -7,7 +7,7 @@
           "title": "Casual vs Operation meeting defaults",
           "path": "/operate/ops-defaults-meetings",
           "bucket": "operate",
-          "owner": "@louis",
+          "owner": "@lop",
           "status": "pilot",
           "decision_id": "dec-2025-11-chapter-ops-defaults",
           "leading_metric": "m-lab-pass",
@@ -20,7 +20,7 @@
           "title": "Chapter Scope (duplicate)",
           "path": "/navigate/chapter-scope",
           "bucket": "navigate",
-          "owner": "@louis",
+          "owner": "@lop",
           "status": "archived",
           "decision_id": "dec-2025-11-chapter-ops-defaults",
           "leading_metric": "m-nav-open",
@@ -33,7 +33,7 @@
           "title": "Cloud access blocks",
           "path": "/mitigate/exception-cloud-access",
           "bucket": "mitigate",
-          "owner": "@louis",
+          "owner": "@lop",
           "status": "pilot",
           "decision_id": "dec-2025-11-chapter-ops-defaults",
           "leading_metric": "m-time-to-freeze",
@@ -46,7 +46,7 @@
           "title": "Frontend charter",
           "path": "/navigate/frontend-charter",
           "bucket": "navigate",
-          "owner": "@louis",
+          "owner": "@lop",
           "status": "live",
           "decision_id": "dec-2025-11-chapter-ops-defaults",
           "leading_metric": "m-time-to-answer",
@@ -59,7 +59,7 @@
           "title": "Learn overview",
           "path": "/learn",
           "bucket": "learn",
-          "owner": "@louis",
+          "owner": "@lop",
           "status": "live",
           "decision_id": "dec-2025-11-chapter-ops-defaults",
           "leading_metric": "m-dashboard-freshness-days",
@@ -72,7 +72,7 @@
           "title": "Mitigate overview",
           "path": "/mitigate",
           "bucket": "mitigate",
-          "owner": "@louis",
+          "owner": "@lop",
           "status": "pilot",
           "decision_id": "dec-2025-11-chapter-ops-defaults",
           "leading_metric": "m-dashboard-freshness-days",
@@ -98,7 +98,7 @@
           "title": "Operate overview",
           "path": "/operate",
           "bucket": "operate",
-          "owner": "@louis",
+          "owner": "@lop",
           "status": "live",
           "decision_id": "dec-2025-11-chapter-ops-defaults",
           "leading_metric": "m-dashboard-freshness-days",
@@ -111,7 +111,7 @@
           "title": "Signals roster",
           "path": "/learn/signals-roster",
           "bucket": "learn",
-          "owner": "@louis",
+          "owner": "@lop",
           "status": "live",
           "decision_id": "dec-2025-11-chapter-ops-defaults",
           "leading_metric": "m-dashboard-freshness-days",
@@ -124,7 +124,7 @@
           "title": "Steward roster",
           "path": "/operate/stewards",
           "bucket": "operate",
-          "owner": "@louis",
+          "owner": "@lop",
           "status": "live",
           "decision_id": "dec-2025-11-chapter-ops-defaults",
           "leading_metric": "m-dashboard-freshness-days",
