chore(quality-gate): update DIST_DIR path for consistency in workflow

--- a/.github/workflows/quality-gate.yml
+++ b/.github/workflows/quality-gate.yml
@@ -16,7 +16,7 @@ jobs:
     if: github.event.pull_request.draft == false
 
     env:
-      DIST_DIR: ./docs/.vitepress/dist
+      DIST_DIR: ${{ github.workspace }}/docs/.vitepress/dist
       BASE_URL: /
 
     steps:
