chore(quality-gate): refine exclude-path regex for draft files in link checker

--- a/.github/workflows/quality-gate.yml
+++ b/.github/workflows/quality-gate.yml
@@ -68,7 +68,7 @@ jobs:
             --base-url "${{ env.DIST_DIR }}"
             --require-https
             --offline
-            --exclude-path ".*/drafts/.*"
+            --exclude-path '(^|/)drafts/.*'
             --github-token "${{ secrets.GITHUB_TOKEN }}"
             "${{ env.DIST_DIR }}/**/*.html"
         env:
